# project-resonance

./: .gitignore  .replit  BUGFIXES.md  README.md  README_ADD.txt  agent_input_prompt.txt  agent_todo.md  app.py  create-structure.js  index.html  main.py  netlify.toml  pyproject.toml  setup.py  test_fixes.py  tree.txt
.github/: ISSUES_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
benchmarks/: run_compression_benchmark.py
benchmarks/system/: docker-compose.yml  resonance_balancer.py  run_system_benchmark.py
data/: notes.json  sample1.txt  sample2.md
docs/: REFLECTION_DEMO_README.md  testing.ipynb
docs/.ipynb_checkpoints/: testing-checkpoint.ipynb
netlify/functions/: api.py  main.py
phiresearch_compression/: README.md  __init__.py  compressor.py
phiresearch_compression/core/: fcm_core.cpp  fcm_core.h
phiresearch_systems/: __init__.py  balancing.py  caching.py  generators.py
project_resonance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
resonance/benchmarks/: run_compression_benchmark.py
resonance/phiresearch_compression/: utils.py
resonance/phiresearch_systems/: database.py
resonance/project_resonance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
resonance_demos/: README.md  app.py  democontext.md  requirements.txt  sample_text.txt
resonance_demos/templates/: about.html  architecture.html  balancer_demo.html  cloud_demo.html  compression_demo.html  index.html  market_demo.html  model_demo.html  modlo_demo.html  (+5 more)
tests/: test_compression.py  test_reflection_demo.py
tools/: compare_snapshot_zstd.py
(+13 files in other folders)
